correction mobile

--- a/assets/sass/components/_product-list.scss
+++ b/assets/sass/components/_product-list.scss
@@ -224,6 +224,7 @@
 
     @include var.breakpoint(767px) {
       align-items: center;
+      flex-direction: column;
       margin-left: 0;
     }
 
@@ -265,5 +266,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: start;
+  }
+
+  @include var.breakpoint(767px) {
+    align-items: center;
   }
 }
